kubernetes/apps/forgejo/gitea-mirror/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea-mirror
  namespace: forgejo
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
    monitoring.webgrip.io/synthetic-check: blackbox-gitea-mirror
spec:
  hostnames:
    - gitea-mirror.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gitea-mirror
          namespace: forgejo
          port: 4321
